[gd_scene load_steps=5 format=3 uid="uid://lctqputi1hik"]

[ext_resource type="Script" path="res://assets/turrets/TurretBPAmmo.gd" id="1_r5uj7"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_cq0iv"]
load_path = "res://.godot/imported/SpriteSheet.png-224745ff387571f09c27eaa394503970.ctex"

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(13.5306, 9.54935)

[sub_resource type="CircleShape2D" id="2"]
radius = 1094.75

[node name="Ammo" type="Area2D" groups=["bullet"]]
collision_mask = 2147483649
priority = 3
gravity_point = true
gravity_point_unit_distance = 24.919
gravity_point_center = Vector2(0, 15)
gravity_direction = Vector2(0, 15)
gravity = 150.0
script = ExtResource("1_r5uj7")

[node name="AmmoBody" type="Sprite2D" parent="."]
texture = SubResource("CompressedTexture2D_cq0iv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 18
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
spread = 43.6
gravity = Vector2(-80, 3)

[node name="DestructionTimer" type="Timer" parent="."]
one_shot = true

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="CollisionShapeExplosion" type="CollisionShape2D" parent="ExplosionArea"]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("2")

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_DestructionTimer_timeout"]
